infra/k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flexy-api
spec:
  selector:
    app.kubernetes.io/name: flexy-api
  ports:
    - name: http
      port: 8000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: flexy-web
spec:
  selector:
    app.kubernetes.io/name: flexy-web
  ports:
    - name: http
      port: 3000
      targetPort: http
